@@ -6,10 +6,13 @@
  building_fort_14th: "Keep"
  building_road_network: "Road Network"
  building_post_office: "Guild"
+ building_post_office_desc: "This building helps with the spread of §YGuilds§! institution."
  building_harbour: "Port"
  building_armory: "Armory"
  building_customs_house: "Apothecary"
+ building_customs_house_desc: "This building helps with the spread of §YPublic Health§! institution."
  building_arsenal: "Hospice"
+ building_arsenal_desc: "This building helps with the spread of §YPublic Health§! institution."
  building_monument: "Monument"
  building_artisan: "Artisan"
  building_watchman: "Watchman"
