@@ -6,10 +6,13 @@
  building_fort_14th: "Bergfried"
  building_road_network: "Straßennetz"
  building_post_office: "Gilde"
+ building_post_office_desc: "Dieses Gebäude trägt zur Verbreitung der Institution §YGilden§! bei."
  building_harbour: "Hafen"
  building_armory: "Waffenkammer"
  building_customs_house: "Apotheke"
+ building_customs_house_desc: "Dieses Gebäude trägt zur Verbreitung der Institution §YGesundheitswesen§! bei."
  building_arsenal: "Hospiz"
+ building_arsenal_desc: "Dieses Gebäude trägt zur Verbreitung der Institution §YGesundheitswesen§! bei."
  building_monument: "Monument"
  building_artisan: "Kunsthandwerker"
  building_watchman: "Nachtwächter"
